prevent button overlap on xs device

--- a/apps/concierge_site/assets/css/v2/_forms.scss
+++ b/apps/concierge_site/assets/css/v2/_forms.scss
@@ -76,6 +76,10 @@ label.form__label--inline {
 
 .form__action-button {
   min-width: 10rem;
+
+  @include media-breakpoint-down(xs) {
+    min-width: 8rem;
+  }
 }
 
 .form__section {
